# kortex_joystick_demo

./: Dockerfile  README.md  compose.kinova-ouster-demo.yaml  compose.panther-kinova.yaml  demo.repos  docker-compose.yaml
.github/workflows/: build-docker-image.yaml
demo/: .env  Dockerfile.rviz  compose.gamepad.yaml  compose.kinova-ouster-demo.yaml  compose.kinova.yaml  compose.ouster.yaml  compose.panther-kinova.yaml  compose.realsense.yaml  compose.rviz.yaml  compose.vnc.yaml  compose.yaml  net.env  setup_virtual_desktop.sh
demo/config/: kinova_config.rviz
kortex_joystick_demo/: CMakeLists.txt  package.xml
kortex_joystick_demo/config/: kinova_rviz.rviz  kortex_joystick_config.yaml
kortex_joystick_demo/include/kortex_joystick_demo/: kortex_joystick_node.hpp  protection_zones_node.hpp
kortex_joystick_demo/launch/: kortex_joystick_demo.launch
kortex_joystick_demo/src/: kortex_joystick_node.cpp  main.cpp  protection_zones_main.cpp  protection_zones_node.cpp
kortex_joystick_demo/urdf/: panther.urdf.xacro
