<?xml version="1.0"?>
<package format="2">
  <name>kortex_joystick_demo</name>
  <version>0.0.0</version>
  <description>The kortex_joystick_demo package</description>
  <maintainer email="dawid.kmak@husarion.com">Dawid Kmak</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kortex_driver</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>kortex_driver</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>kortex_driver</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
