<?xml version="1.0"?>
<package format="3">
  <name>kortex_joystick_demo</name>
  <version>0.0.1</version>

  <description>Package for controlling Panther robot and Kortex gen3 manipulator with a gamepad</description>
  <license>Apache License 2.0</license>

  <author email="dawid.kmak@husarion.com">Dawid Kmak</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/kortex_joystick_demo</url>
  <url type="bugtracker">https://github.com/husarion/kortex_joystick_demo/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>kortex_driver</depend>
  <depend>sensor_msgs</depend>

  <export></export>
</package>